recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: ';' expected but ',' found.
  tree(steps-1, length*shrink, angle), shrink)
                                     ^